<resources>
    <string name="app_name">Anonim Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_account">Hesap Oluştur</string>
    <string name="login">Giriş Yap</string>
    <string name="mail">E-posta adresi</string>
    <string name="Password_reset">Şifremi Unuttum</string>
    <string name="user_name">Kullanıcı adı</string>
    <string name="mail_control">Lütfen geçerli bir e-posta adresi \nyazdığından emin ol.</string>
    <string name="userName_login">Oturum açmak için kullanıcı adı veya \ne-posta adresini kullanabilirsin..</string>
    <string name="app_description">Tanıdıkların için gel \nKeşfettiklerin için kal</string>
</resources>